# incsfntly

./: CMakeLists.txt  CMakePresets.json  CMake_dependencies.cmake  README.md
incl/incsfntly/: incsfntly.hpp
src/: incsfntly.cpp  main.cpp
